Bug 157528 - setting enemy to computer doesn't work instantly
Summary: setting enemy to computer doesn't work instantly
Status: RESOLVED FIXED
Alias: None
Product: konquest
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Pierre Ducroquet
URL:
Keywords:
: 159775 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-02-09 16:01 UTC by Majin Sniper
Modified: 2008-07-17 20:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Majin Sniper 2008-02-09 16:01:06 UTC
Version:           2.0 (using Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.1.2 from Gentoo ebuild
OS:                Linux

When setting a player type to computer, the selection is not used, unless at least one other setting is altered (e.g. reject the map, change the number of planets, add another player, etc.).
A way to reproduce:
Select new Game, set Player 2 to any computer type, click o.k. to start the game. Player two will be a human player.
But:
Select new Game, set Player 2 to any computer type, then click on ŕeject once, and then click o.k. to start the game, Player 2 will be computer controlled.

Another thing I've noticed: When setting the first player to computer, it can be controlled by human in the first turn anyways, but from turn two on, it is computer controlled.

Keep up the great work, I really like this game :-)
Comment 1 Pierre Ducroquet 2008-02-09 17:10:55 UTC
SVN commit 772863 by ducroquet:

Fix for bug 157528.
Will be backported soon...

BUG:157528



 M  +10 -5     gameview.cc  
 M  +13 -10    newgamedlg.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=772863
Comment 2 Pierre Ducroquet 2008-03-24 11:03:45 UTC
It looks like the bug is still here :/
Comment 3 Pierre Ducroquet 2008-03-24 11:04:20 UTC
*** Bug 159775 has been marked as a duplicate of this bug. ***
Comment 4 Pierre Ducroquet 2008-07-17 20:57:28 UTC
Well, I don't remember when, but this bug has been fixed...
As of KDE 4.1 rc1, the problem doesn't exist any longer.