Backport the fix for bug 157528 to KDE 4.0

BUG: 157528


svn path=/branches/KDE/4.0/kdegames/konquest/; revision=772866